[package]
name = "rustcombination"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="*"
blas = "0.22.0"
lapack = "0.19.0"
blas-src = {version ="*", features=["intel-mkl"]}
lapack-src = {version="*", features=["intel-mkl"]}
rayon = "1.5.2"

[dev-dependencies]
rand = "*"
rand_distr = "*"
